// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressiveImage should match snapshot for BackgroundImage 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgba(63,67,80,0.08)",
        "justifyContent": "center",
      },
      {},
    ]
  }
>
  <ImageBackground
    resizeMode="cover"
    source={
      {
        "uri": "https://images.com/image.png",
      }
    }
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`ProgressiveImage should match snapshot for Default Image 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgba(63,67,80,0.08)",
        "justifyContent": "center",
      },
      {},
    ]
  }
>
  <ForwardRef(AnimatedComponentWrapper)
    nativeID="image-undefined"
    onError={[MockFunction]}
    resizeMethod="auto"
    resizeMode="contain"
    source="https://images.com/image.png"
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
        null,
      ]
    }
  />
</View>
`;

exports[`ProgressiveImage should match snapshot for Image 1`] = `
<ForwardRef(AnimatedComponentWrapper)
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgba(63,67,80,0.08)",
        "justifyContent": "center",
      },
      {},
      {
        "backgroundColor": "rgba(63,67,80,NaN)",
      },
    ]
  }
>
  <ForwardRef(AnimatedComponentWrapper)
    onError={[MockFunction]}
    resizeMethod="auto"
    resizeMode="contain"
    source={
      {
        "testUri": "../../../dist/assets/images/thumb.png",
      }
    }
    style={
      [
        undefined,
        {
          "opacity": 0.5,
          "tintColor": "#3f4350",
        },
      ]
    }
    testID="progressive_image.thumbnail"
  />
  <ForwardRef(AnimatedComponentWrapper)
    nativeID="image-undefined"
    onError={[MockFunction]}
    onLoadEnd={[Function]}
    resizeMethod="auto"
    resizeMode="contain"
    source={
      {
        "uri": "https://images.com/image.png",
      }
    }
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
        {
          "opacity": 0,
        },
      ]
    }
    testID="progressive_image.highResImage"
  />
</ForwardRef(AnimatedComponentWrapper)>
`;
